# Ai-Agents

./: .env  .gitignore  pyproject.toml  requirements.txt  test.ipynb
notebook/: test.ipynb
research_and_analyst/config/: configuration.yaml
research_and_analyst/exception/: custom_exception.py
research_and_analyst/logger/: __init__.py
research_and_analyst/utils/: config_loader.py  model_loader.py
